# model

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: build-and-push.yml  ci.yml  megalinter.yml  python-build-wheel.yml  release.yml
docs/: PROPOSAL-signal-schemas.md  io-design-review.md
schemas/kafka/raw-signal/: value.avsc
tests/: test_models.py
tradingcz/config/: __init__.py  settings.py
tradingcz/io/: kafka.py  kafka_writer.py
tradingcz/lang/: __init__.py  version.py
tradingcz/model/: __init__.py
tradingcz/model/dto/: __init__.py  bar.py  quote.py  snapshot.py  trade.py
tradingcz/model/enum/: order.py
tradingcz/model/executor/: limit_order.py  market_order.py
tradingcz/model/response/: kafka_keys.py  snapshot.py
