[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-model"
version = "0.0.1"
description = "Shared data models for the trading platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Trading CZ" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cz"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "schemas/",
    "README.md",
]

